--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -4,81 +4,97 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
-        Title="Workshop Tracker Login"
-        Height="235"
-        Width="500"
+        Title="Workshop Tracker - Login"
+        Height="260"
+        Width="600"
         WindowStartupLocation="CenterScreen">
-    <Grid Margin="0,0,0,-6">
+
+    <Grid Margin="10">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <!-- Teal header -->
-        <Border Grid.Row="0" Background="#FF00AAA8" Padding="10">
-            <TextBlock Text="Workshop Tracker Login"
-                       Foreground="White"
-                       FontSize="18"
-                       FontWeight="Bold"/>
+        <!-- Top teal header -->
+        <Border Grid.Row="0"
+                Background="#00AAA8"
+                Padding="10"
+                CornerRadius="4">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+
+                <TextBlock Text="Workshop Tracker"
+                           Foreground="White"
+                           FontSize="20"
+                           FontWeight="Bold"
+                           VerticalAlignment="Center" />
+
+                <TextBlock Grid.Column="1"
+                           Text="Login"
+                           Foreground="White"
+                           FontSize="16"
+                           VerticalAlignment="Center" />
+            </Grid>
         </Border>
 
         <!-- Body -->
-        <Border Grid.Row="1" Padding="20" Margin="0,0,0,33">
-            <Grid Margin="0,0,0,-42">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                </Grid.ColumnDefinitions>
+        <Grid Grid.Row="1" Margin="0,12,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
 
-                <!-- Username -->
-                <TextBlock Grid.Row="0" Grid.Column="0"
-                           Text="Username:"
-                           VerticalAlignment="Center"
-                           Margin="0,0,10,5"/>
-                <TextBox Grid.Row="0" Grid.Column="1"
-                         Margin="67,0,97,5"
-                         Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}"/>
+            <!-- Username -->
+            <TextBlock Grid.Row="0" Grid.Column="0"
+                       Text="Username:"
+                       VerticalAlignment="Center"
+                       Margin="0,0,8,4" />
+            <TextBox x:Name="UsernameTextBox"
+                     Grid.Row="0" Grid.Column="1"
+                     Margin="0,0,8,4" />
 
-                <!-- Password -->
-                <TextBlock Grid.Row="1" Grid.Column="0"
-                           Text="Password:"
-                           VerticalAlignment="Center"
-                           Margin="0,0,10,5"/>
-                <PasswordBox x:Name="PasswordBoxControl"
-                             Grid.Row="1" Grid.Column="1"
-                             Margin="67,0,97,5"
-                             PasswordChanged="PasswordBox_PasswordChanged"/>
+            <!-- Password -->
+            <TextBlock Grid.Row="1" Grid.Column="0"
+                       Text="Password:"
+                       VerticalAlignment="Center"
+                       Margin="0,0,8,4" />
+            <PasswordBox x:Name="PasswordBox"
+                         Grid.Row="1" Grid.Column="1"
+                         Margin="0,0,8,4" />
 
-                <!-- Branch + Login -->
-                <TextBlock Grid.Row="2" Grid.Column="0"
-                           Text="Branch:"
-                           VerticalAlignment="Center"
-                           Margin="0,0,10,5"/>
-                <ComboBox Grid.Row="2" Grid.Column="1"
-                          Margin="67,0,97,5"
-                          ItemsSource="{Binding Branches}"
-                          SelectedItem="{Binding SelectedBranch, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                          IsEnabled="{Binding IsBranchEnabled}"/>
+            <!-- Branch -->
+            <TextBlock Grid.Row="2" Grid.Column="0"
+                       Text="Branch:"
+                       VerticalAlignment="Center"
+                       Margin="0,0,8,4" />
+            <ComboBox x:Name="BranchComboBox"
+                      Grid.Row="2" Grid.Column="1"
+                      Margin="0,0,8,4" />
 
-                <!-- Status -->
-                <TextBlock Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="3"
-                           Margin="0,10,0,0"
-                           Foreground="Red"
-                           Text="{Binding Message}"/>
-                <Button Grid.Row="3" Grid.Column="1"
-                    Margin="233,10,39,0"
-                    Padding="15,5"
-                    Content="Login"
-                    Click="LoginButton_Click" Height="29" VerticalAlignment="Top" Grid.RowSpan="2"/>
-            </Grid>
-        </Border>
+            <!-- Buttons -->
+            <StackPanel Grid.Row="3" Grid.Column="1"
+                        Orientation="Horizontal"
+                        HorizontalAlignment="Right"
+                        Margin="0,12,0,0">
+                <Button x:Name="LoginButton"
+                        Content="Login"
+                        Width="80"
+                        Margin="0,0,8,0"
+                        Click="LoginButton_Click" />
+                <Button Content="Exit"
+                        Width="80"
+                        Click="Close_Click" />
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
