--- a/Views/LoginWindow.xaml
+++ b/Views/LoginWindow.xaml
@@ -1,100 +1,98 @@
 <Window x:Class="WorkshopTracker.Views.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d"
-        Title="Workshop Tracker - Login"
-        Height="225"
-        Width="352"
+        Title="Workshop Tracker Login"
+        Height="260"
+        Width="520"
+        ResizeMode="NoResize"
         WindowStartupLocation="CenterScreen">
 
-    <Grid Margin="10">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-
-        <!-- Top teal header -->
-        <Border Grid.Row="0"
-                Background="#00AAA8"
-                Padding="10"
-                CornerRadius="4">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <TextBlock Text="Workshop Tracker"
-                           Foreground="White"
-                           FontSize="20"
-                           FontWeight="Bold"
-                           VerticalAlignment="Center" />
-
-                <TextBlock Grid.Column="1"
-                           Text="Login"
-                           Foreground="White"
-                           FontSize="16"
-                           VerticalAlignment="Center" />
-            </Grid>
-        </Border>
-
-        <!-- Body -->
-        <Grid Grid.Row="1" Margin="0,12,0,0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
-            </Grid.ColumnDefinitions>
+    <Border Background="#F5F5F5" Padding="10">
+        <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
-                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <!-- Username -->
-            <TextBlock Grid.Row="0" Grid.Column="0"
-                       Text="Username:"
-                       VerticalAlignment="Center"
-                       Margin="0,0,8,4" />
-            <TextBox x:Name="UsernameTextBox"
-                     Grid.Row="0" Grid.Column="1"
-                     Margin="0,0,8,4" />
+            <!-- Top teal header -->
+            <Border Grid.Row="0"
+                    Background="#00AAA8"
+                    CornerRadius="8"
+                    Padding="12"
+                    Margin="0,0,0,10">
+                <DockPanel>
+                    <TextBlock Text="Workshop Tracker"
+                               FontSize="22"
+                               FontWeight="Bold"
+                               Foreground="White"
+                               DockPanel.Dock="Left"/>
+                    <TextBlock Text="Login"
+                               FontSize="18"
+                               Margin="10,0,0,0"
+                               Foreground="White"
+                               HorizontalAlignment="Right"
+                               DockPanel.Dock="Right"/>
+                </DockPanel>
+            </Border>
 
-            <!-- Password -->
-            <TextBlock Grid.Row="1" Grid.Column="0"
-                       Text="Password:"
-                       VerticalAlignment="Center"
-                       Margin="0,0,8,4" />
-            <PasswordBox x:Name="PasswordBox"
-                         Grid.Row="1" Grid.Column="1"
-                         Margin="0,0,8,4" />
+            <!-- Login form -->
+            <Grid Grid.Row="1" Margin="0,0,0,10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="110"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
 
-            <!-- Branch -->
-            <TextBlock Grid.Row="2" Grid.Column="0"
-                       Text="Branch:"
-                       VerticalAlignment="Center"
-                       Margin="0,0,8,4" />
-            <ComboBox x:Name="BranchComboBox"
-                      Grid.Row="2" Grid.Column="1"
-                      Margin="0,0,8,4" />
+                <!-- Username -->
+                <TextBlock Grid.Row="0" Grid.Column="0"
+                           Margin="0,0,8,6"
+                           VerticalAlignment="Center"
+                           Text="Username:"/>
+                <TextBox x:Name="UsernameTextBox"
+                         Grid.Row="0" Grid.Column="1"
+                         Margin="0,0,0,6"
+                         Height="24"/>
+
+                <!-- Password -->
+                <TextBlock Grid.Row="1" Grid.Column="0"
+                           Margin="0,0,8,6"
+                           VerticalAlignment="Center"
+                           Text="Password:"/>
+                <PasswordBox x:Name="PasswordBox"
+                             Grid.Row="1" Grid.Column="1"
+                             Margin="0,0,0,6"
+                             Height="24"/>
+
+                <!-- Branch -->
+                <TextBlock Grid.Row="2" Grid.Column="0"
+                           Margin="0,0,8,0"
+                           VerticalAlignment="Center"
+                           Text="Branch:"/>
+                <ComboBox x:Name="BranchComboBox"
+                          Grid.Row="2" Grid.Column="1"
+                          Height="24"
+                          IsEditable="False"/>
+            </Grid>
 
             <!-- Buttons -->
-            <StackPanel Grid.Row="3" Grid.Column="1"
+            <StackPanel Grid.Row="2"
                         Orientation="Horizontal"
-                        HorizontalAlignment="Right"
-                        Margin="0,12,0,0">
-                <Button x:Name="LoginButton"
-                        Content="Login"
-                        Width="80"
+                        HorizontalAlignment="Right">
+                <Button Content="Login"
+                        Width="90"
+                        Height="28"
                         Margin="0,0,8,0"
-                        Click="LoginButton_Click" />
+                        Click="LoginButton_Click"/>
                 <Button Content="Exit"
-                        Width="80"
-                        Click="Close_Click" />
+                        Width="90"
+                        Height="28"
+                        Click="ExitButton_Click"/>
             </StackPanel>
         </Grid>
-    </Grid>
+    </Border>
 </Window>
